--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.mybatis.demo</groupId>
     <artifactId>mybatisdemo</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>mybatis-primer</module>
+    </modules>
 
 
     <dependencies>
